--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,7 +2,7 @@
 
 @import "material-icons";
 @import "../node_modules/mdi/css/materialdesignicons.min";
-@import "../node_modules/dialog-polyfill/dialog-polyfill";
+//@import "../node_modules/dialog-polyfill/dialog-polyfill";
 
 // Variables and mixins
 @import "../node_modules/material-design-lite/src/variables";
