--- a/application/components/schedule/schedule.html
+++ b/application/components/schedule/schedule.html
@@ -1,6 +1,10 @@
 <template>
 
+    <require from="../test"></require>
+
     <require from="../stick-top"></require>
+    <require from="../bar/bar"></require>
+    <require from="../new_work_shift_dialog/newWorkShiftDialog"></require>
 
     <style>
         .mdl-layout__header {
@@ -20,13 +24,6 @@
             bottom: 0;
             height: 2px;
             background-color: white;
-        }
-        .btns {
-            display: inline-block;
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 10
         }
     </style>
     <header class="mdl-layout__header">
@@ -52,33 +49,34 @@
             </nav>
         </div>
     </header>
-    <div class="btns">
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
-                hide.bind="isCurrentDate"
-                click.trigger="toCurrent()">
-            <i class="mdi mdi-flag-variant"></i>
-        </button>
-        &nbsp;&nbsp;
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
-                click.trigger="move(-1)">
-            <i class="mdi mdi-chevron-left"></i>
-        </button>
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
-                click.trigger="move(1)">
-            <i class="mdi mdi-chevron-right"></i>
-        </button>
-    </div>
 
     <div class="schedule"
          class.bind="(period === 'day' && 'schedule__days')   ||
                      (period === 'week' && 'schedule__weeks') ||
                      (period === 'month' && 'schedule__months')"
          ref="schedule">
+        <div class="schedule__ctrl">
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
+                    hide.bind="isCurrentDate"
+                    click.trigger="toCurrent()">
+                <i class="mdi"
+                   class.bind="selectedTime > 0 ? 'mdi-chevron-double-left' : 'mdi-chevron-double-right'"></i>
+            </button>
+            &nbsp;&nbsp;
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
+                    click.trigger="move(-1)">
+                <i class="mdi mdi-chevron-left"></i>
+            </button>
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
+                    click.trigger="move(1)">
+                <i class="mdi mdi-chevron-right"></i>
+            </button>
+        </div>
         <div class="schedule-panel">
             <div class="schedule-panel__head">
                 <button class="schedule-panel__btn_all">Все салоны</button>
             </div>
-            <div repeat.for="group of employersJSONArray">
+            <div repeat.for="group of employersArray">
                 <div class="schedule-panel__item_group"
                      click.trigger="group.hide = !group.hide">
                     <div class="schedule-panel__left">
@@ -92,7 +90,8 @@
                      show.bind="!group.hide"
                      repeat.for="employer of group.employers">
                     <div class="schedule-panel__left">
-                        <div class="schedule-panel__user_pic"></div>
+                        <div class="schedule-panel__user_pic"
+                             class.bind="'schedule-color__color_' + employer.colorCode"></div>
                     </div>
                     <div class="schedule-panel__right">
                         <div class="schedule-panel__name">${employer.name}</div>
@@ -150,7 +149,7 @@
              class.bind="animate && 'schedule__animation'"
              css.bind="{'transform': 'translateX(' + translateX + 'px)'}">
             <div class="schedule__row_group"
-                 repeat.for="group of employersJSONArray">
+                 repeat.for="group of employersArray">
                 <div class="schedule__group"
                      repeat.for="level1 of dateArray"
                      class.bind="level1.time < 0 && 'schedule__group_past'">
@@ -164,30 +163,57 @@
                              repeat.for="employer of group.employers">
                             <div class="schedule__layout_cell"
                                  repeat.for="level2 of level1">
-                                <div class="bar"
-                                     if.bind="period !== 'day' && getEvent(employer.id, level2)"
-                                     class.bind="(level1.time < 0 ?
-                                                  'bar--past schedule-color__past_' + employer.colorCode :
-                                                  'schedule-color__' + employer.colorCode) + ' ' +
-                                                 (period === 'month' ? 'bar--wide' : '')">
 
-                                </div>
+                                <!--<bar if.bind="showAllBars"-->
+                                     <!--data.bind="{-->
+                                        <!--scalable:  false,-->
+                                        <!--disable:   period === 'day',-->
+                                        <!--period:    period,-->
+                                        <!--time:      level1.time,-->
+                                        <!--colorCode: employer.colorCode,-->
+                                        <!--data:      getEvent(employer.id, level2)-->
+                                     <!--}"></bar>-->
+
+                                <!--<div class="bar"-->
+                                     <!--if.bind="showAllBars && getEvent(employer.id, level2)"-->
+                                     <!--class.bind="(level1.time < 0 ?-->
+                                                  <!--'bar&#45;&#45;past schedule-color__past_' + employer.colorCode :-->
+                                                  <!--'schedule-color__' + employer.colorCode) + ' ' +-->
+                                                 <!--(period === 'month' ? 'bar&#45;&#45;wide' : '')">-->
+                                <!--</div>-->
+                                <!--<div class="bar bar&#45;&#45;add"-->
+                                     <!--if.bind="showAllBars && !getEvent(employer.id, level2) && level1.time >= 0"-->
+                                     <!--click.trigger="openAddEventDialog(group, employer)"-->
+                                     <!--class.bind="('schedule-color__fade_' + employer.colorCode) + ' ' +-->
+                                                 <!--(period === 'month' ? 'bar&#45;&#45;wide' : '')">-->
+                                    <!--<i class="mdi mdi-plus"></i>-->
+                                <!--</div>-->
+
                             </div>
-                            <div class="bar" style="left: 112px;width: 351px;"
-                                 if.bind="period === 'day' && getEvent(employer.id, level1[0])"
-                                 class.bind="(level1.time < 0 ?
-                                              'bar--past schedule-color__past_' + employer.colorCode :
-                                              'schedule-color__' + employer.colorCode)">
-                                <div class="bar__drag bar__drag--left mdi mdi-drag-vertical"
-                                     if.bind="level1.time >= 0"></div>
-                                <div class="bar__drag bar__drag--right mdi mdi-drag-vertical"
-                                     if.bind="level1.time >= 0"></div>
+
+                            <bar if.bind="showDayBars"
+                                 data.bind="{
+                                    scalable:  true,
+                                    disable:   period !== 'day',
+                                    period:    period,
+                                    time:      level1.time,
+                                    startDate: level1[0],
+                                    endDate:   level1[level1.length - 1],
+                                    cells:     level1.length,
+                                    cellWidth: cellWidth,
+                                    colorCode: employer.colorCode,
+                                    data:      getEvent(employer.id, level1[0])
+                                 }"></bar>
+
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <new-work-shift-dialog data.bind="newWorkShiftData"></new-work-shift-dialog>
 
 </template>
