--- a/scss/bar.scss
+++ b/scss/bar.scss
@@ -50,13 +50,20 @@
     color: $white;
     opacity: 0;
 
+    //transition: 0s 0s;
+
     //@include material-animation-default;
 
     &:hover {
       opacity: 1;
+      //transition: 0s .2s;
       box-shadow: none;
     }
   }
+  //&--add-hover {
+  //  opacity: 1;
+  //  box-shadow: none;
+  //}
   &--moving {
     cursor: move;
   }
