--- a/application/components/work-shift-dialog/work-shift-dialog.html
+++ b/application/components/work-shift-dialog/work-shift-dialog.html
@@ -4,7 +4,7 @@
     <dialog class="schedule-dialog schedule-dialog--850 mdl-dialog" ref="dialog">
         <button class="schedule-dialog__btn_close mdl-button mdl-js-button mdl-button--icon"
                 click.trigger="close()">
-            <i class="material-icons">close</i>
+            <i class="mdi mdi-close"></i>
         </button>
         <h4 class="mdl-dialog__title">
             <span if.bind="!data.shift">Добавление</span><span if.bind="data.shift">Редактирование</span> смены
