--- a/application/components/conflict-shift-dialog/conflict-shift-dialog.html
+++ b/application/components/conflict-shift-dialog/conflict-shift-dialog.html
@@ -2,7 +2,7 @@
     <dialog class="schedule-dialog mdl-dialog" ref="dialog">
         <button class="schedule-dialog__btn_close mdl-button mdl-js-button mdl-button--icon"
                 click.trigger="close()">
-            <i class="material-icons">close</i>
+            <i class="mdi mdi-close"></i>
         </button>
         <h4 class="mdl-dialog__title">Конфликт в расписании</h4>
         <div class="mdl-dialog__content">
