--- a/application/components/schedule/schedule.html
+++ b/application/components/schedule/schedule.html
@@ -2,6 +2,7 @@
     <require from="../stick-top"></require>
     <require from="../work-shift-dialog/work-shift-dialog"></require>
     <require from="../conflict-shift-dialog/conflict-shift-dialog"></require>
+    <require from="../snack-bar/snack-bar"></require>
     <require from="../bar/bar"></require>
     <require from="../bar-size"></require>
 
@@ -186,5 +187,6 @@
 
     <work-shift-dialog data.bind="newWorkShiftData"></work-shift-dialog>
     <conflict-shift-dialog data.bind="conflictShiftData"></conflict-shift-dialog>
+    <snack-bar data.bind="snackBarData"></snack-bar>
 
 </template>
