--- a/scss/conflict.scss
+++ b/scss/conflict.scss
@@ -32,7 +32,7 @@
       color: $gray65;
     }
   }
-  &__col_btn {
+  &__col_btn { // todo: delete
     margin-left: $indent;
     padding: $indent 0;
     min-width: 150px;
@@ -43,6 +43,18 @@
     margin-left: $indent;
     flex-shrink: 0;
     text-align: right;
+  }
+  &__col_right {
+    padding: 0 $indent 0 ($indent * 1.5);
+    display: flex;
+    align-items: center;
+    label {
+      width: $indent;
+      height: $indent * 1.5;
+    }
+  }
+  &__col_padding {
+    padding: $indent 0;
   }
   &__group {
     margin-bottom: $indent;
